# novel-writer-skills

./: .gitignore  README.md  index.html
novel-cli/: README.md  pyproject.toml  setup.cfg
novel-cli/novel_cli/: __init__.py  cli.py
novel-cli/tests/: test_style_scan.py
scripts/: setup-gitee.sh  setup.sh
skills/web-novel-writer/: CHANGELOG.md  SKILL.md
skills/web-novel-writer/phases/: brainstorm.md  golden-three.md  long-serial.md  review.md  short-novel.md
skills/web-novel-writer/references/: emotion-model.md  formulas.md  long-serial-arcs.md  villain-dialogue-examples.md  writing-rules.md
